--- a/Index.html
+++ b/Index.html
@@ -6,9 +6,12 @@
     <title>Prueba</title>
 </head>
 <body>
-    <h1>
-        <p>fgh</p>
-        <p>fghfg</p>
-    </h1>
+    <h1>hola</h1>
+    <p>fgh</p>
+    <p>fgh</p>
+
+    <footer>
+        <h3>creado por juan pescadero</h3>
+    </footer>
 </body>
 </html>
